cabal-version:      2.2
category:           Biology
build-type:         Simple
extra-source-files: AUTHORS.md
                    CHANGELOG.md
                    README.md


name:               phylocomgraph
version:            0.1.0.1

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Program and library for general phylogenetic graph search

description:        Phylogenetic Componet Graph provides a library for
                    interacting with phylogenetic graphs. It defines a
                    decalartive scripting language for defining phylogenetic
                    searches. Said scripts can be evaluated by the provided pcg
                    program to perform a phylogenetic search on an input dataset.


-- Group of buildinfo specifications to correctly build and link to the C & C++:
-- FFI code.
common ffi-buildinfo

  cc-options:       --std=c11

  c-sources:        ffi/external-direct-optimization/alignCharacters.c
                    ffi/external-direct-optimization/alignmentMatrices.c
                    ffi/external-direct-optimization/c_alignment_interface.c
                    ffi/external-direct-optimization/c_code_alloc_setup.c
                    ffi/external-direct-optimization/costMatrix.c
                    ffi/external-direct-optimization/dyn_character.c
                    ffi/external-direct-optimization/ukkCheckPoint.c
                    ffi/external-direct-optimization/ukkCommon.c
                    ffi/memoized-tcm/costMatrixWrapper.c
                    ffi/memoized-tcm/dynamicCharacterOperations.c
                    ffi/sequential-align/sequentialAlignInterface.c
                    ffi/sequential-align/sequentialAlign.c

  cxx-options:      --std=c++14

  cxx-sources:      ffi/memoized-tcm/costMatrix_2d.cpp
                    ffi/memoized-tcm/costMatrix_3d.cpp

  -- This library is required for linking to the C++ standard template library.
  extra-libraries:  stdc++

  hs-source-dirs:   ffi

  -- Here we list all directories that contain C & C++ header files that the FFI
  -- tools will need to locate when preprocessing the C files. Without listing
  -- the directories containing the C header files here, the FFI preprocessor
  -- (hsc2hs, c2hs, etc.) will fail to locate the requisite files. Note also,
  -- that the parent directory of the nessicary C & C++ header files must be
  -- specified. The preprocessor will not recursively look in subdirectories for
  -- header files!
  include-dirs:     ffi/external-direct-optimization
                    ffi/memoized-tcm
                    ffi/sequential-align


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:      -O2
                    -foptimal-applicative-do
--                    -g
                    -- Sanity check warnings
                    -Wall
                    -Wcompat
                    -Wdodgy-foreign-imports
                    -Wduplicate-exports
                    -Wempty-enumerations
                    -Widentities
                    -Wincomplete-patterns
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wmissing-fields
                    -Wmissing-home-modules
                    -Wmissing-monadfail-instances
                    -Wmissing-signatures
                    -Wnoncanonical-monadfail-instances
                    -Wnoncanonical-monad-instances
                    -Wnoncanonical-monoid-instances
                    -Woverflowed-literals
                    -Woverlapping-patterns
                    -Wredundant-constraints
                    -Wsemigroup
                    -Wtabs
                    -Wunrecognised-warning-flags
                    -Wunused-binds
                    -Wunused-do-bind
                    -Wunused-foralls
                    -Wunused-imports
                    -Wunused-matches
                    -Wwrong-do-bind


-- Global deviations from Haskell98
common language-specs

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions: MonadFailDesugaring


library

  import:             ffi-buildinfo
                    , ghc-flags
                    , language-specs

  build-depends:      base               >=4.10
                    , binary
                    , bimap
                    , bv-little
                    , cassava >=0.5
                    , compact
                    -- >=0.5.8 Required for Data.Map.restrictKeys
                    , containers         >=0.5.8
                    , deepseq
                    , data-default
                    , dlist
                    , foldl
                    -- >=2999.20 Required for forgiving construction of DOT object
                    , graphviz           >=2999.20
                    , hashable
                    , integer-gmp
                    , keys
                    , lens
                    , mono-traversable   >=1.0
                    , mtl
                    , parallel
                    , pcg-file-parsers
                    , pcg-utility
                    , pointed
                    , pretty-tree
                    , QuickCheck
                    -- required for Data.Semigroup.Foldable.toNonEmpty
                    , semigroupoids      >=5.2.1
                    , semigroups
                    , smallcheck
                    , text
                    , text-short
                    , text-show
                    , text-show-instances
                    , transformers
                    , unordered-containers
                    -- >=0.12.0.2 required for compatability with "compact regions"
                    , vector             >=0.12.0.2
                    , vector-binary-instances
                    -- >=3.4 required for corrected definition of (!) & index
                    , vector-instances   >=3.4
                    , xml

  hs-source-dirs:   src

  exposed-modules:  Analysis.Parsimony.Additive.Internal
                    Analysis.Parsimony.Dynamic.DirectOptimization
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.FFI
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise
                    Analysis.Parsimony.Dynamic.SequentialAlign
                    Analysis.Parsimony.Fitch.Internal
                    Analysis.Parsimony.Sankoff.Internal
                    Analysis.Parsimony.Internal
                    Analysis.Scoring
                    Bio.Character
                    Bio.Character.Decoration.Additive
                    Bio.Character.Decoration.Continuous
                    Bio.Character.Decoration.Discrete
                    Bio.Character.Decoration.Dynamic
                    Bio.Character.Decoration.Fitch
                    Bio.Character.Decoration.Metric
                    Bio.Character.Decoration.NonMetric
                    Bio.Character.Encodable
                    Bio.Character.Encodable.Continuous
                    Bio.Character.Exportable
                    Bio.Character.Parsed
                    Bio.Character.Type
                    Bio.Metadata
                    Bio.Metadata.CharacterName
                    Bio.Metadata.Continuous
                    Bio.Metadata.Discrete
                    Bio.Metadata.DiscreteWithTCM
                    Bio.Metadata.Dynamic
                    Bio.Metadata.Parsed
                    Bio.Sequence
                    Bio.Sequence.Block
                    Bio.Sequence.Character
                    Bio.Sequence.Metadata
                    Bio.Graph
                    Bio.Graph.Component
                    Bio.Graph.Forest.Parsed
                    Bio.Graph.LeafSet
                    Bio.Graph.Node
                    Bio.Graph.PhylogeneticDAG
                    Bio.Graph.ReferenceDAG
                    Bio.Graph.ReferenceDAG.Internal
                    Bio.Graph.Solution
                    Bio.Graph.ZipperDAG
                    Control.Evaluation
                    Control.Parallel.Custom
                    Control.Monad.Logger
                    Data.Alphabet
                    Data.Alphabet.IUPAC
                    Data.EdgeLength
                    Data.TCM
                    Data.TCM.Dense
                    Data.TCM.Memoized
                    Data.TCM.Dense.FFI
                    Data.TCM.Memoized.FFI
                    Data.TopologyRepresentation
                    Data.NodeLabel
                    Data.Vector.Custom
                    Data.Vector.NonEmpty
                    Text.Newick.Class
                    Text.XML
                    Text.XML.Custom

  -- probably can be moved to other-modules:
                    Test.Custom.NucleotideSequence
                    Test.Custom.DynamicCharacterNode

  other-modules:    Analysis.Parsimony.Dynamic.DirectOptimization.Internal
--                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.FFI
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Internal
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.NeedlemanWunsch
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Internal
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Ribbon
                    Analysis.Parsimony.Dynamic.SequentialAlign.FFI
                    Bio.Character.Decoration.Additive.Class
                    Bio.Character.Decoration.Additive.Internal
                    Bio.Character.Decoration.Continuous.Class
                    Bio.Character.Decoration.Continuous.Internal
                    Bio.Character.Decoration.Dynamic.Class
                    Bio.Character.Decoration.Dynamic.Internal
                    Bio.Character.Decoration.Fitch.Class
                    Bio.Character.Decoration.Fitch.Internal
                    Bio.Character.Decoration.Metric.Class
                    Bio.Character.Decoration.Metric.Internal
                    Bio.Character.Decoration.NonMetric.Class
                    Bio.Character.Decoration.NonMetric.Internal
                    Bio.Character.Decoration.Shared
                    Bio.Character.Encodable.Continuous.Class
                    Bio.Character.Encodable.Continuous.Internal
                    Bio.Character.Encodable.Dynamic
                    Bio.Character.Encodable.Dynamic.Class
                    Bio.Character.Encodable.Dynamic.Internal
                    Bio.Character.Encodable.Internal
                    Bio.Character.Encodable.Static
                    Bio.Character.Encodable.Static.Class
                    Bio.Character.Encodable.Static.Internal
                    Bio.Character.Encodable.Stream
                    Bio.Character.Exportable.Class
                    Bio.Character.Parsed.Class
                    Bio.Character.Parsed.Internal
                    Bio.Metadata.General
                    Bio.Metadata.General.Class
                    Bio.Metadata.General.Internal
                    Bio.Metadata.Discrete.Class
                    Bio.Metadata.Discrete.Internal
                    Bio.Metadata.DiscreteWithTCM.Class
                    Bio.Metadata.DiscreteWithTCM.Internal
                    Bio.Metadata.Dynamic.Class
                    Bio.Metadata.Dynamic.Internal
                    Bio.Metadata.MetricRepresentation
                    Bio.Graph.BinaryRenderingTree
                    Bio.Graph.Constructions
                    Bio.Graph.Forest
                    Bio.Graph.Node.Internal
                    Bio.Graph.PhylogeneticDAG.Class
                    Bio.Graph.PhylogeneticDAG.Internal
                    Bio.Graph.PhylogeneticDAG.NetworkEdgeQuantification
                    Bio.Graph.PhylogeneticDAG.DynamicCharacterRerooting
                    Bio.Graph.PhylogeneticDAG.Postorder
                    Bio.Graph.PhylogeneticDAG.Preorder
                    Bio.Graph.PhylogeneticDAG.Reification
                    Bio.Graph.PhylogeneticDAG.TotalEdgeCost
                    Bio.Graph.ZipperDAG.Internal
                    Bio.Sequence.Block.Builder
                    Bio.Sequence.Block.Character
                    Bio.Sequence.Block.Internal
                    Bio.Sequence.Block.Metadata
                    Bio.Sequence.Internal
                    Control.Evaluation.Unit
                    Control.Evaluation.Internal
                    Control.Evaluation.Trans
                    Data.Alphabet.Internal
                    Data.Alphabet.Special
                    Data.EdgeSet
                    Data.Range
                    Data.TCM.Internal
                    Test.QuickCheck.Arbitrary.Instances
                    Text.XML.Class


executable pcg


  import:             ghc-flags
                    , language-specs

  main-is:          Main.hs

  build-depends:      phylocomgraph
                    , ansi-wl-pprint
                    , base             >=4.10
                    , binary
                    -- Required for Data.Map.restrictKeys
                    , bytestring
                    , cassava >=0.5
                    , compact
                    -- Required for Data.Map.restrictKeys
                    , containers       >=0.5.8
                    , data-default
                    , deepseq
                    , directory
                    , filepath
                    , gitrev
                    , Glob
                    -- >=2999.20 Required for forgivig constructio of DOT object
                    , graphviz         >=2999.20
                    , keys
                    , lens
                    , megaparsec       >=7.0.0
                    , optparse-applicative
                    , parallel
                    , pcg-file-parsers
                    , pcg-language
                    , pcg-utility
                    , random-shuffle
                    , semigroupoids
                    , semigroups
                    , text
                    , text-short
                    , text-show
                    , transformers
                    , validation
                    -- >=0.12.0.2 required for compatability with "compact regions"
                    , vector             >=0.12.0.2
                    , xml


  ghc-options:      -threaded -rtsopts
                    -- -rtsopts -with-rtsopts=-N8

  hs-source-dirs:   app

  other-modules:    Paths_phylocomgraph
                    PCG.Command.Build.Evaluate
                    PCG.Command.Echo.Evaluate
                    PCG.Command.Load.Evaluate
                    PCG.Command.Read.DecorationInitialization
                    PCG.Command.Read.Evaluate
                    PCG.Command.Read.ReadError
                    PCG.Command.Read.Unification.Master
                    PCG.Command.Read.Unification.UnificationError
                    PCG.Command.Report.Evaluate
                    PCG.Command.Report.GraphViz
                    PCG.Command.Report.Metadata
                    PCG.Command.Save.Evaluate
                    PCG.Computation.Internal


executable fasta-differ

  import:             ghc-flags
                    , language-specs

  main-is:          fasta-differ.hs

  build-depends:      base >=4.10
                    , containers
                    , keys
                    , megaparsec  >=7.0.0
                    , pcg-file-parsers

  hs-source-dirs:   utils


executable 2d-do-comparison

  import:             ghc-flags
                    , language-specs

  main-is:          2d-do-comparison.hs

  build-depends:      phylocomgraph
                    , base >=4.10
                    , bimap
                    , QuickCheck

  hs-source-dirs:   utils


executable 3d-do-comparison

  import:             ghc-flags
                    , language-specs

  main-is:          3d-do-comparison.hs

  build-depends:      phylocomgraph
                    , base >=4.10
                    , bimap
                    , deepseq
                    , QuickCheck

  hs-source-dirs:   utils


executable affine-safety

  import:             ghc-flags
                    , language-specs

  main-is:          affine-safety.hs

  build-depends:      phylocomgraph
                    , base >=4.10
                    , bimap
                    , QuickCheck

  hs-source-dirs:   utils


executable generate-data-set

  import:             ghc-flags
                    , language-specs

  main-is:          generate-data-set.hs

  build-depends:      ansi-wl-pprint
                    , base               >=4.8
                    , containers
                    , keys
                    , MemoTrie
                    , mtl
                    , optparse-applicative
                    , random
                    , random-shuffle
                    , validation
                    , vector

  hs-source-dirs:   utils


executable generate-tcm

  import:             ghc-flags
                    , language-specs

  main-is:          generate-tcm.hs

  build-depends:      ansi-wl-pprint
                    , base               >=4.8
                    , containers
                    , keys
                    , optparse-applicative
                    , pcg-utility
                    , vector

  hs-source-dirs:   utils


executable newick-resolver

  import:             ghc-flags
                    , language-specs

  main-is:          newick-resolver.hs

  build-depends:      base               >=4.8
                    , megaparsec         >=7.0.0
                    , pcg-file-parsers

  hs-source-dirs:   utils


executable sequential-alignment-invariants

  import:             ghc-flags
                    , language-specs

  main-is:          sequential-alignment-invariants.hs

  build-depends:      phylocomgraph
                    , base >=4.10
                    , bimap
                    , QuickCheck

  hs-source-dirs:   utils


executable three-way-mean-check

  import:             ghc-flags
                    , language-specs

  main-is:          three-way-mean-check.hs

  build-depends:      phylocomgraph
                    , base >=4.10
                    , bimap
                    , lens
                    , QuickCheck

  hs-source-dirs:   utils



executable ukkonen-do-comparison

  import:             ghc-flags
                    , language-specs

  main-is:          ukkonen-do-comparison.hs

  build-depends:      phylocomgraph
                    , base >=4.10
                    , bimap
                    , QuickCheck

  hs-source-dirs:   utils


Test-Suite integration-tests

  import:             ghc-flags
                    , language-specs

  type:             exitcode-stdio-1.0

  main-is:          IntegrationTests.hs


  build-depends:      base               >=4.10
                    , binary
                    , bytestring
                    , containers
                    , deepseq
                    , directory
                    , filepath
                    , lens
                    , pcg-utility
                    , phylocomgraph
                    , process 
                    , semigroups
                    , tasty
                    , tasty-golden
                    , tasty-hunit
                    , tasty-rerun

  ghc-options:      -threaded
                    -with-rtsopts=-N7

  hs-source-dirs:   test

  other-modules:    TestSuite.GoldenTests
                    TestSuite.ScriptTests
                    TestSuite.SubProcess


Test-Suite unit-tests

  import:             ffi-buildinfo
                    , ghc-flags
                    , language-specs

  type:             exitcode-stdio-1.0

  main-is:          UnitTests.hs

  build-depends:      base               >=4.10
                    , bimap
                    , binary
                    , bv-little
                    -- >=0.5.8 Required for Data.Map.restrictKeys
                    , cassava >=0.5
                    , containers         >=0.5.8
                    , deepseq
                    , dlist
                    , foldl
                    , graphviz           >=2999.20
                    , hashable
                    , integer-gmp
                    , keys
                    , lens
                    , mono-traversable   >=1.0
                    , mtl
                    , pcg-utility
                    , pretty-tree
                    , phylocomgraph
                    , pointed
                    , QuickCheck
                    -- required for Data.Semigroup.Foldable.toNonEmpty
                    , semigroupoids      >=5.2.1
                    , semigroups
                    , smallcheck
                    , tasty
                    , tasty-hunit
                    , tasty-quickcheck
                    , tasty-smallcheck
                    , tasty-rerun
                    , text-show
                    , text-show-instances
                    , transformers
                    , unordered-containers
                    -- >=0.12.0.2 required for compatability with "compact regions"
                    , vector           >=0.12.0.2
                    , vector-binary-instances
                    -- >=3.4 required for corrected definition of (!) & index
                    , vector-binary-instances
                    , vector-instances >=3.4
                    , xml

  ghc-options:      -threaded
--                    -with-rtsopts=-N4

  -- This is a hack beacuse the cxx-options & cxx-options feature in Cabal-2.2
  -- is not fully implmented and does not correctly link to the C++ sources.
--  if os(linux) && arch(x86_64)
--    ghc-options:    .stack-work/dist/x86_64-linux/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_2d.dyn_o
--                    .stack-work/dist/x86_64-linux/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_3d.dyn_o

--  if os(osx) && arch(x86_64)
--    ghc-options:    .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_2d.dyn_o
--                    .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/ffi/memoized-tcm/costMatrix_3d.dyn_o

  hs-source-dirs:   test, src, app

  other-modules:    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.FFI
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Internal
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.NeedlemanWunsch
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Test
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Internal
                    Analysis.Parsimony.Dynamic.DirectOptimization.Pairwise.Ukkonen.Ribbon
                    Analysis.Parsimony.Internal
                    Bio.Character
                    Bio.Character.Encodable
                    Bio.Character.Encodable.Continuous
                    Bio.Character.Encodable.Continuous.Class
                    Bio.Character.Encodable.Continuous.Internal
                    Bio.Character.Encodable.Dynamic
                    Bio.Character.Encodable.Dynamic.Class
                    Bio.Character.Encodable.Dynamic.Internal
                    Bio.Character.Encodable.Dynamic.Test
                    Bio.Character.Encodable.Static
                    Bio.Character.Encodable.Static.Class
                    Bio.Character.Encodable.Static.Internal
                    Bio.Character.Encodable.Static.Test
                    Bio.Character.Encodable.Internal
                    Bio.Character.Encodable.Static
                    Bio.Character.Encodable.Static.Class
                    Bio.Character.Encodable.Static.Internal
                    Bio.Character.Encodable.Stream
                    Bio.Character.Exportable
                    Bio.Character.Exportable.Class
                    Bio.Character.Type
                    Bio.Graph.BinaryRenderingTree
                    Bio.Graph.Component
                    Bio.Graph.LeafSet
                    Bio.Graph.ReferenceDAG.Internal
                    Bio.Graph.ReferenceDAG.Test
                    Control.Evaluation.Internal
                    Control.Evaluation.Test
                    Control.Evaluation.Unit
                    Control.Monad.Logger
                    Data.Alphabet
                    Data.Alphabet.IUPAC
                    Data.Alphabet.Internal
                    Data.Alphabet.Special
                    Data.Alphabet.Test
                    Data.EdgeSet
                    Data.Range
                    Data.TCM
                    Data.TCM.Internal
                    Data.TCM.Dense
                    Data.TCM.Dense.FFI
                    Data.TCM.Memoized
                    Data.TCM.Memoized.FFI
                    Data.TCM.Test
                    Data.Vector.Custom
                    Data.Vector.NonEmpty
                    Test.QuickCheck.Arbitrary.Instances
                    Test.Custom.NucleotideSequence
                    Test.HUnit.Custom
                    TestSuite.ExecutableTests
                    TestSuite.LibraryTests
                    Text.Newick.Class
                    Text.XML
                    Text.XML.Class
                    Text.XML.Custom
